# wiggers-graaf

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  REUSE.toml
.github/workflows/: CI.yml  Publish.yml
LICENSES/: OFL-1.1-RFN.txt
src/: board_view.rs  frame_scheduler.rs  lib.rs  main.rs  solver.rs  utils.rs
src/arrangement/: mod.rs
src/board/: mod.rs  unittest.rs
src/graph/: mod.rs  unittest.rs
src/graph_view/: arrangement.rs  mod.rs  renderer.rs
src/renderer/: mod.rs
src/solver/: mod.rs
src/views/: frame_scheduler.rs  mod.rs  mouse_handler.rs  pointer_handler.rs  resize_observer.rs  utils.rs
src/views/board_view/: controls.rs  layout.rs  mod.rs  renderer.rs  visual_board.rs
src/views/controls/: mod.rs  mouse_handler.rs  pointer_handler.rs  touch_handler.rs
src/views/graph_view/: arrangement.rs  controls.rs  fragment.glsl  mod.rs  renderer.rs  vertex.glsl
src/views/moves_view/: mod.rs
src/web/: index.html  script.js  style.css
src/web/assets/: favicon.png.license
src/web/scripts/: animation.js  game-board.js  game-moves.js  lazy-animation-worker.js  lazy-animation.js  main.js
src/web/styles/: game-board.css  game-moves.css  main.css
