[package]
name = "wiggers-graaf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"


[dependencies]
euclid = "0.22.11"
itertools = "0.14.0"
log = "0.4.22"
env_logger = "0.11.5"
anyhow = "1.0.93"
wasm-bindgen = "0.2.99"
js-sys = "0.3.76"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = false }

[dependencies.web-sys]
version = "0.3"
features = [
    'console',
    'Document',
    'Window',
    'HtmlCanvasElement',
    'WebGl2RenderingContext',
    "WebGlVertexArrayObject",
    'WebGlProgram',
    'WebGlShader',
    'WebGlBuffer',
    'WebGlUniformLocation'
]
